Fixed the Center Alignment issue by changing the flex align , reset back to old padding

--- a/style.css
+++ b/style.css
@@ -36,12 +36,13 @@ button{
 {
     body
     {
-        padding:5px;
+        padding:10px;
     }
     form div
     {
         flex-direction: column;
         gap: 5px;
+        align-items: flex-start;
     }
     form div label
     {
